tests/elab/fail/unbound_type_var1.t20
;; The type variable 'b' is unbound.

(: id (-> 'a 'a))
(define (id x)
  (let ([(y : 'b) x]) (y)))